# ckanext-dalrrd-emc-dcpr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  conftest.py  cypress.json  gulpfile-docker.js  gulpfile.js  package-lock.json  package.json  pyproject.toml  setup.cfg  students.db
.github/actions/action-common-ci/: action.yml
.github/workflows/: ci.yml  handle-pr-artifacts.yml  local-ci.yml  receive-pr.yml  staging-ci.yaml  test.yml
ckanext-dalrrd-emc-dcpr/: setup.cfg  setup.py  test.ini
ckanext-dalrrd-emc-dcpr/ckanext/dalrrd_emc_dcpr/: plugin.py
ckanext/dalrrd_emc_dcpr/: blueprint.py  commands.py  constants.py  dataset_schema.yaml  dcpr_dictization.py  email_notifications.py  error_report_dictization.py  get_releases.py  helpers.py  jobs.py  plugin.py  utils.py  wsgi.py
ckanext/dalrrd_emc_dcpr/assets/: webassets.yml
ckanext/dalrrd_emc_dcpr/blueprints/: dcpr.py  emc.py  error_report.py  news.py  news_utils.py  publish.py  saved_searches.py  sys_stats.py  xml_parser.py
ckanext/dalrrd_emc_dcpr/cli/: __init__.py  _bootstrap_data.py  _legacy_sasdi_downloader.py  _sample_datasets.py  _sample_dcpr_request.py  (+8 more)
docker/: build.sh  ckan-ci-settings.ini  ckan-dev-settings.ini  ckan-test-settings.ini  compose-down.sh  compose-up.sh  compose.py  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  prepare-for-frontend-dev.sh  smoketest.py
docker/csw-harvest-target/: pycsw-config.cfg
docker/pycsw/: pycsw-config.cfg  pycsw_repository_mappings.py
docker/solr/: schema.xml
tests/: _test_integration_error_reports.py  test_integration_dcpr_actions.py  test_integration_dcpr_auth.py  test_integration_dcpr_error_reports.py  test_integration_dcpr_requests.py  test_integration_error_reports.py  test_integration_org_editor_role.py  test_unit_helpers.py  test_unit_plugin.py  test_unit_template_helpers.py
(+179 files in other folders)
