[tool.poetry]
name = "ckanext-dalrrd-emc-dcpr"
version = "0.1.0"
description = "A CKAN extension that implements SA DALRRD EMC/DCPR"
authors = ["Ricardo Garcia Silva <ricardo@kartoza.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
