[tool.poetry]
name = "ckanext-dalrrd-emc-dcpr"
version = "0.1.0"
description = "A CKAN extension that implements SA DALRRD EMC/DCPR"
authors = ["Ricardo Garcia Silva <ricardo@kartoza.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
# NOTE: These are ckan 2.9.4 dependencies, as reported in ckan's
# `requirements.in` file. When updating the ckan version you will need to
# check if these dependencies have been changed and update this accordingly.
# Then you'll need to run `poetry update --lock` to update the lock file
alembic = "1.0.0"
Babel = "2.7.0"
Beaker = "1.11.0"
bleach = "3.1.4"
click = "7.1.2"
dominate = "2.4.0"
fanstatic = "1.1"
feedgen = "0.9.0"
Flask = "1.1.1"
Flask-Babel = "1.0.0"
flask-multistatic = "1.0"
Jinja2 = "2.10.1"
PyJWT = "1.7.1"
Markdown = "2.6.7"
passlib = "1.6.5"
polib = "1.0.7"
psycopg2 = "2.8.2"
python-magic = "0.4.15"
pysolr = "3.6.0"
python-dateutil = ">=1.5.0"
pytz = "2016.7"
PyUtilib = "5.7.1"
pyyaml = "5.4.1"
"repoze.who" = "2.3"
requests = "2.25.1"
rq = "1.0"
setuptools = "44.1.0"
simplejson = "3.10.0"
SQLAlchemy = "1.3.5"
sqlparse = "0.2.2"
tzlocal = "1.3"
unicodecsv = ">=0.9"
watchdog = "2.1.5"
webassets = "0.12.1"
Werkzeug = {extras = ["watchdog"], version = "1.0.0"}
"zope.interface" = "4.3.2"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
